--- a/ElStudio/Base.lproj/Main.storyboard
+++ b/ElStudio/Base.lproj/Main.storyboard
@@ -417,8 +417,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ecp-jU-Lbg">
-                                                    <rect key="frame" x="0.0" y="8" width="106" height="106"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ecp-jU-Lbg">
+                                                    <rect key="frame" x="8" y="19" width="90" height="79"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -430,15 +430,23 @@
                                 </cells>
                                 <connections>
                                     <outlet property="dataSource" destination="xfq-oB-Ohh" id="n5W-ki-KEk"/>
+                                    <outlet property="delegate" destination="xfq-oB-Ohh" id="EPs-Vf-0a7"/>
                                 </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
-                    <navigationItem key="navigationItem" id="Gey-2u-QaB"/>
+                    <navigationItem key="navigationItem" id="Gey-2u-QaB">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="TOb-56-cod">
+                            <connections>
+                                <action selector="DoneChoosingImages:" destination="xfq-oB-Ohh" id="QQm-Dg-AqU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="mxW-Y8-cC0" id="KcV-Cq-y6x"/>
+                        <segue destination="ynv-tx-TWD" kind="push" identifier="FromFaceBookToShowImages" id="fr6-tc-WWZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mtq-sk-B32" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -856,6 +864,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Jnn-E7-rT7"/>
+        <segue reference="fr6-tc-WWZ"/>
     </inferredMetricsTieBreakers>
 </document>
